--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ProgressTimer</string>
+    <string name="progress_timer">Progress Timer</string>
+    <string name="progress">PROGRESS</string>
+    <string name="click_hear_to_progress_10">Start</string>
 </resources>
